--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -21,29 +22,29 @@
     <div class="container">
   <div class="row box">
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-        <img src="css/img/gallery/one.jpeg" class="img-responsive gallery-img img-animation">
+        <img src="css/img/gallery/one.jpeg" class="img-responsive gallery-img img-animation fadein-animation">
     </div>
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-        <img src="css/img/gallery/two.jpg" class="img-responsive gallery-img img-animation">
+        <img src="css/img/gallery/two.jpg" class="img-responsive gallery-img img-animation fadein-animation">
     </div>
   </div>
 
   <div class="row box">
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-          <img src="css/img/gallery/three.jpg" class="img-responsive gallery-img img-animation">
+          <img src="css/img/gallery/three.jpg" class="img-responsive gallery-img img-animation fadein-animation">
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-          <img src="css/img/gallery/four.jpeg" class="img-responsive gallery-img img-animation">
+          <img src="css/img/gallery/four.jpeg" class="img-responsive gallery-img img-animation fadein-animation">
       </div>
 
     </div>
 
     <div class="row box">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <img src="css/img/gallery/five.jpeg" class="img-responsive gallery-img img-animation">
+            <img src="css/img/gallery/five.jpeg" class="img-responsive gallery-img img-animation fadein-animation">
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <img src="css/img/gallery/six.jpg" class="img-responsive gallery-img img-animation">
+            <img src="css/img/gallery/six.jpg" class="img-responsive gallery-img img-animation fadein-animation">
         </div>
       </div>
   </div>
@@ -67,35 +68,59 @@
 <div class="projects">
     <h2>Your projects with description</h2>
     <p>You can show your projects with description here!</p>
-      <div class="container">
+<div class="container">
+<div class="animation-element slide-left testimonial">
     <div class="row projects-gallery">
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <img src="css/img/projects/seven.jpeg" class="img-responsive projects-img img-animation">
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis convallis quis mauris sed imperdiet. Nam sagittis, mi eget commodo pulvinar, nulla lectus vulputate nunc, ut fringilla libero urna sed erat. Integer id vulputate libero. Mauris non accumsan tortor. Vivamus eget dolor at lorem vehicula pellentesque eu eu enim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In ultrices magna sem, in tristique lacus egestas a. Nunc vel tempus nibh</p>
       </div>
-    </div>
-  
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 projects-information">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis convallis quis mauris sed imperdiet. 
+                Nam sagittis, mi eget commodo pulvinar, nulla lectus vulputate nunc, ut fringilla libero urna sed erat. 
+                Integer id vulputate libero. Mauris non accumsan tortor. 
+                Vivamus eget dolor at lorem vehicula pellentesque eu eu enim.
+              </p>
+      </div>
+      </div>
+</div>
+
+
+<div class="animation-element slide-left testimonial">
     <div class="row projects-gallery-reverse">
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis convallis quis mauris sed imperdiet. Nam sagittis, mi eget commodo pulvinar, nulla lectus vulputate nunc, ut fringilla libero urna sed erat. Integer id vulputate libero. Mauris non accumsan tortor. Vivamus eget dolor at lorem vehicula pellentesque eu eu enim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In ultrices magna sem, in tristique lacus egestas a. Nunc vel tempus nibh</p>
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 projects-information">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis convallis quis mauris sed imperdiet. 
+              Nam sagittis, mi eget commodo pulvinar, nulla lectus vulputate nunc, ut fringilla libero urna sed erat. 
+              Integer id vulputate libero. Mauris non accumsan tortor. 
+              Vivamus eget dolor at lorem vehicula pellentesque eu eu enim.
+            </p>
     </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <img src="css/img/projects/eight.jpg" class="img-responsive projects-img img-animation">
         </div>
-
       </div>
-  
+</div>
+
+
+<div class="animation-element slide-left testimonial">
       <div class="row projects-gallery">
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
               <img src="css/img/projects/nine.jpg" class="img-responsive projects-img img-animation">
           </div>
-              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis convallis quis mauris sed imperdiet. Nam sagittis, mi eget commodo pulvinar, nulla lectus vulputate nunc, ut fringilla libero urna sed erat. Integer id vulputate libero. Mauris non accumsan tortor. Vivamus eget dolor at lorem vehicula pellentesque eu eu enim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In ultrices magna sem, in tristique lacus egestas a. Nunc vel tempus nibh</p>
+              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 projects-information">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis convallis quis mauris sed imperdiet. 
+                Nam sagittis, mi eget commodo pulvinar, nulla lectus vulputate nunc, ut fringilla libero urna sed erat. 
+                Integer id vulputate libero. Mauris non accumsan tortor. 
+                Vivamus eget dolor at lorem vehicula pellentesque eu eu enim.
+              </p>
             </div>
         </div>
     </div>
+</div>
+
+
+
+
+
     <p>&nbsp</p>
 </div>
 </section>
