--- a/index.html
+++ b/index.html
@@ -11,9 +11,26 @@
 <body>
 <header id="header-section">
 <div class="header background-img">
-  <h1>PROJECT</h1>
+        <div class="three col">
+                <div class="hamburger" id="hamburger-1">
+                  <span class="line"></span>
+                  <span class="line"></span>
+                  <span class="line"></span>
+                </div>
+              </div>
+    <ul class="menu menu-hide">
+        <li>Home</li>
+        <li>Gallery</li>
+        <li>About</li>
+        <li>Projects</li>
+      </ul>
+  <h1>Your Project</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis convallis quis mauris sed imperdiet</p>
 </div>
 </header>
+
+
+
 
 <section id="gallery-section">
 <div class="gallery">
@@ -130,9 +147,9 @@
   <div class="container">
   <div class="row">
     <ul class="footer-icons">
-      <li class="icons"><a href=""><img src="css/img/icons/fb.png"></a></li>
-      <li class="icons"><a href=""><img src="css/img/icons/gh.png"></a></li>
-      <li class="icons"><a href=""><img src="css/img/icons/gm.png"></a></li>
+      <li class="icons"><a href="https://www.facebook.com/marcin.borek.9"><img src="css/img/icons/fb.png"></a></li>
+      <li class="icons"><a href="https://github.com/marcinborek9"><img src="css/img/icons/gh.png"></a></li>
+      <li class="icons"><a href="mailto:marcinborek9@gmail.com"><img src="css/img/icons/gm.png"></a></li>
     </ul>
   </div>
   <div class="row">
