dodanie animacji i menu

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 </div>
               </div>
     <ul class="menu menu-hide">
-        <li>Home</li>
-        <li>Gallery</li>
-        <li>About</li>
-        <li>Projects</li>
+        <li><a href="#header-section">Home</a></li>
+        <li><a href="#gallery-section">Gallery</a></li>
+        <li><a href="#about-section">About</a></li>
+        <li><a href="#projects-section">Projects</a></li>
       </ul>
   <h1>Your Project</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis convallis quis mauris sed imperdiet</p>
