poprawa na firefox

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 <section id="gallery-section">
-<div class="gallery">
+<div class="gallery section-end">
   <h2>Your gallery</h2>
   <p>You can show your projects here!</p>
     <div class="container">
@@ -82,7 +82,7 @@
 </section>
 
 <section id="projects-section">
-<div class="projects">
+<div class="projects section-end">
     <h2>Your projects with description</h2>
     <p>You can show your projects with description here!</p>
 <div class="container">
@@ -133,12 +133,7 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-    <p>&nbsp</p>
+    <p class="section-end">&nbsp</p>
 </div>
 </section>
 
