--- a/index.html
+++ b/index.html
@@ -29,11 +29,8 @@
 </div>
 </header>
 
-
-
-
 <section id="gallery-section">
-<div class="gallery section-end">
+<div class="gallery">
   <h2>Your gallery</h2>
   <p>You can show your projects here!</p>
     <div class="container">
@@ -53,7 +50,6 @@
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <img src="css/img/gallery/four.jpeg" class="img-responsive gallery-img img-animation fadein-animation">
       </div>
-
     </div>
 
     <div class="row box">
@@ -65,7 +61,9 @@
         </div>
       </div>
   </div>
+  <div class="section-end">
   <p>&nbsp</p>
+</div>
 </div>
 </section>
 
@@ -101,7 +99,6 @@
       </div>
 </div>
 
-
 <div class="animation-element slide-left testimonial">
     <div class="row projects-gallery-reverse">
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 projects-information">
@@ -116,7 +113,6 @@
         </div>
       </div>
 </div>
-
 
 <div class="animation-element slide-left testimonial">
       <div class="row projects-gallery">
@@ -154,7 +150,6 @@
   </div>
 </div>
 </footer>
-
 <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="js/script.js"></script>
